--- a/action.yml
+++ b/action.yml
@@ -1,59 +1,57 @@
-name: Deploy docker image at Azure
-description: This deploys an existing short SHA tagged docker image to the namespace indicated
+name: Setup for deploy
+description: This sets up the build environment, logs into Azure, and sets the short SHA variable
 
 inputs:
-  # Note that the below two have default values that should be Arundo-wide
-  cluster:
-    description: Kubernetes cluster resource name at Azure
+  client-id:
+    description: Azure clientId
     required: true
-  deployment:
-    description: deployment in Kubernetes, expected to be the name of the service
+  client-secret:
+    description: Azure clientSecret
     required: true
-  overlays:
-    description: Kustomize overlays directory name
+  language:
+    description: node or dotnet allowed
     required: true
-  overlays-path:
-    description: path to Kustomize overlays directory
-    required: false
-    default: ops/kubernetes/overlays
-  product:
-    description: Arundo product e.g. marathon, identity
+  language-version:
+    description: Desired version in quotes
     required: true
-  registry:
-    description: docker registry name at Azure
+  subscription-id:
+    description: Azure subscriptionId
     required: true
-  resource-group:
-    description: Resource group for cluster
+  tenant-id:
+    description: Azure tenantId
     required: true
-  sha-tag:
-    description: tag for commit, likely shortened sha hash
-    required: true
-  subscription:
-    description: Azure subscription name where cluster resource is housed
-    required: true
+
+outputs:
+  short-sha:
+    description: Seven character version of SHA
+    value: ${{ steps.short-sha.outputs.short-sha }}
 
 runs:
   using: "composite"
   steps:
-    - name: Login to AKS
-      run: |
-        az aks get-credentials --admin --name $cluster --resource-group $resource_group --subscription "$subscription"
-      env:
-        cluster: ${{ inputs.cluster }}
-        resource_group: ${{ inputs.resource-group }}
-        subscription: ${{ inputs.subscription }}
+    - name: Fail if invalid input
+      if: inputs.language != 'node' && inputs.language != 'dotnet'
+      run: exit 1
       shell: bash
 
-    - name: Deploy to kubernetes cluster
-      run: |
-        cd $path/$overlays/
-        kustomize edit set image deployment/$deployment $registry/$product/$deployment:$sha_tag
-        kubectl apply -k .
-      env:
-        deployment: ${{ inputs.deployment }}
-        overlays: ${{ inputs.overlays }}
-        path: ${{ inputs.overlays-path }}
-        product: ${{ inputs.product }}
-        registry: ${{ inputs.registry }}.azurecr.io
-        sha_tag: ${{ inputs.sha-tag }}
+    - name: Setup Node
+      if: inputs.language == 'node' 
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ inputs.language-version }}
+        
+    - name: Setup .NET
+      if: inputs.language == 'dotnet'
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: ${{ inputs.language-version }}
+
+    - name: Login to Azure
+      uses: Azure/login@v1
+      with:
+        creds: '{"clientId":"${{ inputs.client-id }}","clientSecret":"${{ inputs.client-secret }}","subscriptionId":"${{ inputs.subscription-id }}","tenantId":"${{ inputs.tenant-id }}"}'
+
+    - name: Calculate github short sha
+      id: short-sha
+      run: echo "::set-output name=short-sha::$(git rev-parse --short HEAD)"
       shell: bash
