--- a/action.yml
+++ b/action.yml
@@ -33,18 +33,18 @@ runs:
   using: "composite"
   steps:
     - name: Fail if invalid input
-      if: ${{ inputs.build-environment }} != 'node' && ${{ inputs.build-environment }} != 'dotnet'
+      if: inputs.build-environment != 'node' && inputs.build-environment != 'dotnet'
       run: exit 1
       shell: bash
 
     - name: Setup Node
-      if: ${{ inputs.build-environment }} == 'node' 
+      if: inputs.build-environment == 'node' 
       uses: actions/setup-node@v2
       with:
         node-version: ${{ inputs.node-version }}
         
     - name: Setup .NET
-      if: ${{ inputs.build-environment }} == 'dotnet'
+      if: inputs.build-environment == 'dotnet'
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: ${{ inputs.dotnet-version }}
