--- a/action.yml
+++ b/action.yml
@@ -2,6 +2,10 @@ name: Setup for deploy
 description: This sets up the build environment, logs into Azure, and sets the short SHA variable
 
 inputs:
+  build-required:
+    description: Allow suppression of building images because they already exist
+    required: false
+    default: 'true'
   client-id:
     description: Azure clientId
     required: true
@@ -37,21 +41,21 @@ runs:
       if: inputs.language != 'node' && inputs.language != 'dotnet'
       run: exit 1
       shell: bash
-
+       
     - name: Setup Node
-      if: inputs.language == 'node' 
+      if: inputs.language == 'node' && inputs.build-required == 'true'
       uses: actions/setup-node@v3
       with:
         node-version: ${{ inputs.language-version }}
         
     - name: Setup .NET
-      if: inputs.language == 'dotnet' && inputs.nuget-token == 'none'
+      if: inputs.language == 'dotnet' && inputs.nuget-token == 'none' && inputs.build-required == 'true'
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: ${{ inputs.language-version }}
         
     - name: Setup .NET with token
-      if: inputs.language == 'dotnet' && inputs.nuget-token != 'none'
+      if: inputs.language == 'dotnet' && inputs.nuget-token != 'none'  && inputs.build-required == 'true'
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: ${{ inputs.language-version }}
@@ -60,13 +64,12 @@ runs:
         NUGET_AUTH_TOKEN: ${{inputs.nuget-token}}
         
     - name: Install Nuget configuration so docker can use Arundo packages
-      if: inputs.language == 'dotnet' && inputs.nuget-token != 'none'
+      if: inputs.language == 'dotnet' && inputs.nuget-token != 'none' && inputs.build-required == 'true'
       uses: finnp/create-file-action@master
       env:
         FILE_NAME: "nuget.config"
         FILE_DATA: "<?xml version=\"1.0\" encoding=\"utf-8\"?><configuration><packageSources><add key=\"nuget.org\" value=\"https://api.nuget.org/v3/index.json\" protocolVersion=\"3\" /><add key=\"github\" value=\"https://nuget.pkg.github.com/arundo/index.json\" /></packageSources><packageSourceCredentials><github><add key=\"Username\" value=\"usernameNotReallyRequired\" /><add key=\"ClearTextPassword\" value=\"${{ inputs.nuget-token }}\" /></github></packageSourceCredentials></configuration>"
-    
-    
+
     - name: Login to Azure
       uses: Azure/login@v1
       with:
